<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginStart="@dimen/margin_other"
    android:layout_marginTop="@dimen/default_margin_top_bottom"
    android:layout_marginEnd="@dimen/margin_other"
    android:layout_marginBottom="@dimen/default_margin_top_bottom"
    android:background="@drawable/border"
    android:backgroundTint="@color/white"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_not_standard"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_reference_image_view"
            android:layout_gravity="end"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/library_name"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/link_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/link"
            android:clickable="true"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/default_description_text" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="@dimen/default_description_text"
                android:autoLink="web"
                android:textStyle="italic" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>