<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bp_details_background"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/default_margin_top_bottom"
        android:layout_marginBottom="@dimen/default_margin_top_bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message_title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/playfair_display_bold_allfont_ru"
            android:textSize="@dimen/size_text_button"
            android:textColor="?attr/default_text"
            android:text="@string/settings" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_themes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:textOff="Светлая"
            android:fontFamily="@font/playfair_display_bold_allfont_ru"
            android:textOn="Темная"
            app:showText="true"
            android:text="Светлая / Темная тема"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:checkedButton="@+id/offer"
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/pink_out_line"
            android:orientation="horizontal">

            <RadioButton
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:id="@+id/light_theme_radio_button"
                android:background="@drawable/toggle_widget_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:text="Светлая"
                android:textColor="@color/white" />

            <RadioButton
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="1dp"
                android:id="@+id/dark_theme_radio_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/toggle_widget_background"
                android:button="@null"
                android:gravity="center"
                android:text="Темная"
                android:textColor="@color/white" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_marginTop="@dimen/default_margin_top_bottom"
        android:layout_marginBottom="@dimen/default_margin_top_bottom"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="@dimen/default_margin_top_bottom"
        android:layout_marginBottom="@dimen/default_margin_top_bottom"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/about_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:textColor="?attr/default_text"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:fontFamily="@font/playfair_display_bold_allfont_ru"
            android:textSize="@dimen/size_text_button"
            android:drawableLeft="@drawable/ic_baseline_receipt_long_24"
            app:backgroundTint="?attr/button_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textColor="?attr/default_text"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:fontFamily="@font/playfair_display_bold_allfont_ru"
            android:drawableLeft="@drawable/ic_baseline_share_24"
            android:textSize="@dimen/size_text_button"
            app:backgroundTint="?attr/button_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reference_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reference"
            android:textColor="?attr/default_text"
            android:fontFamily="@font/playfair_display_bold_allfont_ru"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:drawableLeft="@drawable/ic_baseline_room_preferences_24"
            android:textSize="@dimen/size_text_button"
            app:backgroundTint="?attr/button_background" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:drawableLeft="@drawable/ic_baseline_logout_24"
            android:fontFamily="@font/playfair_display_bold_allfont_ru"
            android:text="@string/logout"
            android:textColor="?attr/default_text"
            android:textSize="@dimen/size_text_button"
            app:backgroundTint="?attr/button_background" />

    </LinearLayout>

</LinearLayout>